--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
         "@testing-library/jest-dom": "^5.11.8",
         "@testing-library/react": "^11.2.2",
         "@testing-library/user-event": "^12.6.0",
+        "apexcharts": "^3.23.1",
         "axios": "^0.21.1",
         "bootstrap": "^4.5.3",
+        "date-fns": "^2.16.1",
         "jszip": "2.6.1",
         "react": "^17.0.1",
+        "react-apexcharts": "^1.3.7",
         "react-bootstrap": "^1.4.3",
+        "react-date-range": "^1.1.3",
         "react-dom": "^17.0.1",
         "react-file-picker": "0.0.6",
         "react-icons": "^4.1.0",
