--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
         "bootstrap": "^4.5.3",
         "date-fns": "^2.16.1",
         "jszip": "2.6.1",
-        "react": "^17.0.1",
         "react-apexcharts": "^1.3.7",
         "react-bootstrap": "^1.4.3",
         "react-date-range": "^1.1.3",
-        "react-dom": "^17.0.1",
         "react-file-picker": "0.0.6",
         "react-icons": "^4.1.0",
         "react-image": "^4.0.3",
@@ -48,5 +46,12 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "leaflet": "^1.7.1",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
+        "react-leaflet": "^3.0.5",
+        "react-leaflet-control": "^2.1.2"
     }
 }
