--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
         "bootstrap": "^4.5.3",
         "date-fns": "^2.16.1",
         "jszip": "2.6.1",
+        "leaflet": "^1.7.1",
         "react-apexcharts": "^1.3.7",
         "react-bootstrap": "^1.4.3",
         "react-date-range": "^1.1.3",
         "react-file-picker": "0.0.6",
         "react-icons": "^4.1.0",
         "react-image": "^4.0.3",
+        "react-leaflet": "^3.0.5",
+        "react-leaflet-control": "^2.1.2",
         "react-rounded-image": "^2.0.11",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.1",
