--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
         "axios": "^0.21.1",
         "bootstrap": "^4.5.3",
         "date-fns": "^2.16.1",
-        "jszip": "2.6.1",
         "leaflet": "^1.7.1",
         "react-apexcharts": "^1.3.7",
         "react-bootstrap": "^1.4.3",
         "react-date-range": "^1.1.3",
+        "react-datepicker": "^3.4.0",
         "react-file-picker": "0.0.6",
         "react-icons": "^4.1.0",
         "react-image": "^4.0.3",
