--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "react-image": "^4.0.3",
         "react-leaflet": "^3.0.5",
         "react-leaflet-control": "^2.1.2",
+        "react-leaflet-google-layer": "^2.0.3",
+        "react-open-weather": "^1.1.1",
         "react-rounded-image": "^2.0.11",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.1",
