--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -3,8 +3,7 @@ server.port=9090
 spring.datasource.url=jdbc:h2:mem:spring_jpa_user;DB_CLOSE_DELAY=-1;
 spring.h2.console.enabled=true
 spring.datasource.driverClassName=org.h2.Driver
-#spring.jpa.hibernate.ddl-auto=create
 
 # Properties used in application
 signature.secret=secret123.
-remote.home=http://localhost:8080
+remote.home=http://parcel-manager:8080
