--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "date-fns": "^2.16.1",
         "jszip": "2.6.1",
         "leaflet": "^1.7.1",
+        "node-sass": "^4.14.1",
         "react-apexcharts": "^1.3.7",
         "react-bootstrap": "^1.4.3",
         "react-date-range": "^1.1.3",
